--- a/src/styles/Stats.css
+++ b/src/styles/Stats.css
@@ -3,6 +3,7 @@
   display: flex;
   column-gap: 24px;
   min-height: 100vh;
+  padding: 1.2rem 0 0 0;
 }
 
 .headernGraph__container {
